force-app/main/default/objects/Proyecto_Obra_Privada__c/Proyecto_Obra_Privada__c.object-meta.xml
<CustomObject>
    <label>Proyecto Obra Privada</label>
    <nameField>
        <label>Nombre de Proyecto Obra Privada</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos Obra Privada</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>