force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/C_P__c.field-meta.xml
<CustomField>
    <fullName>C_P__c</fullName>
    <label>C.P</label>
    <length>6</length>
    <type>Text</type>
</CustomField>