force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <label>Colonia</label>
    <length>150</length>
    <type>Text</type>
</CustomField>