force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyectista Libre</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos Obra Privada</relationshipLabel>
    <relationshipName>Proyectos_Obra_Privada7</relationshipName>
    <type>Lookup</type>
</CustomField>