force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <label>Detalle</label>
    <type>TextArea</type>
</CustomField>