force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Fecha_de_Termino__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Termino__c</fullName>
    <label>Fecha de Termino</label>
    <type>Date</type>
</CustomField>