force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Municipio_Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Delegacion__c</fullName>
    <label>Municipio/Delegación</label>
    <length>150</length>
    <type>Text</type>
</CustomField>