force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Num__c.field-meta.xml
<CustomField>
    <fullName>Num__c</fullName>
    <label>Num.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>