force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Pa_s__c.field-meta.xml
<CustomField>
    <fullName>Pa_s__c</fullName>
    <label>País</label>
    <length>50</length>
    <type>Text</type>
</CustomField>