force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Participante_1__c.field-meta.xml
<CustomField>
    <fullName>Participante_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos Obra Privada (Participante 1)</relationshipLabel>
    <relationshipName>Proyectos_Obra_Privada4</relationshipName>
    <type>Lookup</type>
</CustomField>