force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Participante_2__c.field-meta.xml
<CustomField>
    <fullName>Participante_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos Obra Privada (Participante 2)</relationshipLabel>
    <relationshipName>Proyectos_Obra_Privada5</relationshipName>
    <type>Lookup</type>
</CustomField>