force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Participante_3__c.field-meta.xml
<CustomField>
    <fullName>Participante_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos Obra Privada (Participante 3)</relationshipLabel>
    <relationshipName>Proyectos_Obra_Privada6</relationshipName>
    <type>Lookup</type>
</CustomField>