force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Valor_Total_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_del_Proyecto__c</fullName>
    <label>Valor Total del Proyecto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>