force-app/main/default/objects/Proyecto_Obra_Privada__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Bajio</fullName>
            </value>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Noroeste</fullName>
            </value>
            <value>
                <fullName>Occidente</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>