force-app/main/default/objects/Proyecto_Obra_Privada__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Valor_Total_del_Proyecto__c</columns>
    <columns>Zona__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>